Harden Secure APK for Java 8-compatible Android runtime